增加：培养计划查询
