# docs/swagger.yaml
@@ -103,7 +103,7 @@ paths:
       summary: 校园卡今日消费查询
       tags:
       - 校园卡
-  /student/library/current/0:
+  /student/library/current:
     post:
       description: 图书馆当前借书记录
       parameters:
@@ -176,6 +176,102 @@ paths:
       - description: 年份
         in: body
         name: year
+        required: true
+        schema:
+          type: string
+      - description: 用户名
+        in: body
+        name: username
+        required: true
+        schema:
+          type: string
+      - description: 密码
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code":200,"data":{object},"msg":"OK"}
+          schema:
+            type: json
+        "400":
+          description: code":400,"data":null,"msg":""}
+          schema:
+            type: json
+      summary: 正方教务考试信息
+      tags:
+      - 正方
+  /student/zf/program:
+    post:
+      description: 正方教务考试信息
+      parameters:
+      - description: 用户名
+        in: body
+        name: username
+        required: true
+        schema:
+          type: string
+      - description: 密码
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code":200,"data":{object},"msg":"OK"}
+          schema:
+            type: json
+        "400":
+          description: code":400,"data":null,"msg":""}
+          schema:
+            type: json
+      summary: 正方教务考试信息
+      tags:
+      - 正方
+  /student/zf/room:
+    post:
+      description: 正方教务考试信息
+      parameters:
+      - description: 学期
+        in: body
+        name: term
+        required: true
+        schema:
+          type: string
+      - description: 年份
+        in: body
+        name: year
+        required: true
+        schema:
+          type: string
+      - description: 校区
+        in: body
+        name: campus
+        required: true
+        schema:
+          type: string
+      - description: 星期几 1，2，3
+        in: body
+        name: weekday
+        required: true
+        schema:
+          type: string
+      - description: 第几周的2次幂的和
+        in: body
+        name: week
+        required: true
+        schema:
+          type: string
+      - description: 第几节课的2次幂的和
+        in: body
+        name: classPeriod
         required: true
         schema:
           type: string
